Archive functionality added (#30)
